@@ -1,4 +1,9 @@
  20120712 (T.S.):
+ - pmelfP.h, strm.c, mstrm.c, fstrm.c: moved handling of 'noclose' arg to
+   pmelf_delstrm() to individual stream method.
+ - pmelf.h, pmelfP.h, strm.c, mstrm.c: added pmelf_mapstrm() which uses mmap
+   when available.
+ 20120712 (T.S.):
  - strm.c, fstrm.c, mstrm.c, pmelfP.h, pmelf.h: added pmelf_tell().
  - Makefile.am, dmpphdr.c, getphdr.c, scnt.c, rdelf.c, getehdr.c,
    pmelf.h:
